SERVER-22747 Fixed coverity analysis bug can't be negative